<resources>
    <string name="app_name">Avisos</string>
    <string name="trabajando_en_amor">TRABAJANDO EN AMOR</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="categoria_aqui">CATEGORIA AQUI</string>
    <string name="category_title_here">CATEGORY TITLE HERE</string>
    <string name="publisher_name_here">PUBLISHER NAME HERE</string>
    <string name="title_of_ad_here">TITLE OF AD HERE</string>
    <string name="pyme_here">PYME HERE</string>
    <string name="default_web_client_id2" translatable="false">141879134338-7ldi7vohviu4qj93ee63opblt1o27uuq.apps.googleusercontent.com</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="gracias_por_evaluarnos">GRACIAS POR EVALUARNOS</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="nombre_usuario_aqui">Nombre Usuario Aqui</string>
    <string name="para_poder_ver_el_detalle_debes_identificarte">PARA PODER VER EL DETALLE, DEBES IDENTIFICARTE</string>
    <string name="user_picture">User Picture</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="publisher_name_detail_here">PUBLISHER NAME DETAIL HERE</string>
    <string name="pyme_detail_here">PYME DETAIL HERE</string>
    <string name="qu_hago">¿Qué hago?</string>
    <string name="titulo_del_aviso_aqui">TITULO DEL AVISO AQUI</string>
    <string name="ciudad_aqui">CIUDAD AQUI</string>
    <string name="evaluaciones">Evaluaciones</string>
    <string name="_00">00</string>
    <string name="telefono_aqui">TELEFONO AQUI</string>
    <string name="evaluacion">EVALUACION</string>
    <string name="direccion_aqui">DIRECCION AQUI</string>
    <string name="donde_estoy">DONDE ESTOY</string>
    <string name="contactame">CONTACTAME</string>
    <string name="detalle_aviso_aqui">DETALLE AVISO AQUI</string>
    <string name="email_here">EMAIL HERE</string>
    <string name="phone_call">Phone call</string>
    <string name="evaluame">EVALUAME</string>
    <string name="share_ad">Share Ad</string>
    <string name="comentarios">COMENTARIOS</string>
    <string name="evalua_nuestros_servicios_1_5_y_comenta">EVALUA NUESTROS SERVICIOS (1-5) Y COMENTA</string>
    <string name="email_dominio_com">email@dominio.com</string>
    <string name="indica_tu_e_mail">Indica tu e-mail</string>
    <string name="enviar">ENVIAR</string>
    <string name="mostrar_resultado_aqui">MOSTRAR RESULTADO AQUI</string>
    <string name="excelente_servicio">Excelente servicio!!!</string>
    <string name="nombre_del_que_publica_el_aviso_aqui">NOMBRE DEL QUE PUBLICA EL AVISO AQUI</string>
    <string name="foto_usuario">foto usuario</string>
    <string name="user_name_here">USER NAME HERE</string>
    <string name="ya_evaluaste_este_servicio">YA EVALUASTE ESTE SERVICIO</string>
</resources>